# WP_Modells

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
Data/: Dockerfile
Data/Geometry/: Edge around Precipice Sandstone 2017 Rev2B revised.dbf  Edge around Precipice Sandstone 2017 Rev2B revised.shp  Edge around Precipice Sandstone 2017 Rev2B revised.shx  Precipice_outcrop_regional_geomodel_2017_250m.dbf  Precipice_outcrop_regional_geomodel_2017_250m.sbn  Precipice_outcrop_regional_geomodel_2017_250m.sbx  Precipice_outcrop_regional_geomodel_2017_250m.shp  Precipice_outcrop_regional_geomodel_2017_250m.shp.xml  Precipice_outcrop_regional_geomodel_2017_250m.shx
Data/Springs/: Active springs_POINT_rJliS3wVll.dbf  Active springs_POINT_rJliS3wVll.sbn  Active springs_POINT_rJliS3wVll.sbx  Active springs_POINT_rJliS3wVll.shp  Active springs_POINT_rJliS3wVll.shx
Data/Water Use/: WATERUSE_GDA94.csv
frontend/: app.js  index.html  scenario.css  scenario.html  scenario.js  setup.css  setup.html  setup.js  style.css
src/: cli.py  config.py  figures.py  grid.py  io_layer.py  model_builder.py  reporting.py  scenarios.py  superposition.py  theis.py
src/api/: app.py  cache.py  schemas.py
tests/: test_config.py  test_end_to_end.py  test_grid.py  test_superposition.py  test_theis.py
