[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precipice-poc"
version = "0.1.0"
description = "Precipice Sandstone — Water Licence Impact Assessment POC (MODFLOW 6 + FloPy)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "flopy>=3.7",
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "fiona>=1.9",
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "xarray>=2023.12",
  "matplotlib>=3.8",
  "contextily>=1.5",
  "pyyaml>=6.0",
  "pydantic>=2.5",
  "typer>=0.12",
  "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "jupyterlab>=4.1",
  "ipykernel>=6.29",
]

[project.scripts]
precipice = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
